# special-primes

./: .gitignore  CMakeLists.txt  PrimeSequenceCalculator.cpp  PrimeSequenceCalculator.h  README.md  prime_numbers_sequences.cpp
Q2 nth prime/: CMakeLists.txt  PrimeCalculator.cpp  PrimeCalculator.h  nth_prime.cpp  nth_prime_origina.cpp
test/: test  test.cpp  test.h
